# duckdb

./: .gitignore  CMakeLists.txt  Makefile
extension/: CMakeLists.txt
extension/avro/: BinaryDecoder.cc  CMakeLists.txt  Compiler.cc  DataFile.cc  FileStream.cc  Generic.cc  GenericDatum.cc  LogicalType.cc  Node.cc  NodeImpl.cc  Schema.cc  Stream.cc  ValidSchema.cc  avro-extension.cpp
extension/avro/include/: Compiler.hh  Config.hh  DataFile.hh  Decoder.hh  Generic.hh  GenericDatum.hh  LogicalType.hh  Node.hh  NodeConcepts.hh  NodeImpl.hh  Specific.hh  Stream.hh  ValidSchema.hh  avro-extension.hpp
extension/avro/json/: JsonDom.cc  JsonDom.hh  JsonIO.cc  JsonIO.hh
extension/datadocs/: CMakeLists.txt  column.cpp  converters.cpp  csv_reader.cpp  datadocs-extension.cpp  file_reader.cpp  inferrer.cpp  ingest.cpp  json_reader.cpp  type_conv.cpp  utility.cpp  value_proxy.cpp  variant.cpp  vector_converter.cpp  vector_proxy.cpp  wkt.cpp  xls_reader.cpp  xml_reader.cpp  zip_reader.cpp
extension/datadocs/cmake/boost/: boost.txt.in
extension/datadocs/cmake/icu/: icu.cmake.txt  icu.txt.in
extension/datadocs/cmake/libexpat/: libexpat.cmake.txt  libexpat.txt.in
extension/datadocs/cmake/zlib/: zlib.cmake.txt  zlib.txt.in
extension/datadocs/contrib/rapidjson/: CMakeLists.txt
extension/datadocs/geo/: CMakeLists.txt  geo-extension.cpp  geo-functions.cpp
extension/datadocs/geo/include/: geo_aggregate_function.hpp
extension/datadocs/geo/liblwgeom/: lwalgorithm.cpp  lwcollection.cpp  lwgeodetic.cpp  lwgeodetic_tree.cpp  lwgeom_geos2.cpp  lwgeom_geos_cluster.cpp  lwin_geojson.cpp  lwline.cpp  lwmpoly.cpp  lwpoly.cpp  lwspheroid.cpp  lwstroke.cpp  lwutil.cpp  measures.cpp
extension/datadocs/geo/parser/: lwin_wkt_lex.cpp
extension/datadocs/geo/postgis/: geography_centroid.cpp  lwgeom_box.cpp  lwgeom_functions_basic.cpp  lwgeom_geos.cpp  lwgeom_inout.cpp
extension/datadocs/include/: column.hpp  converters.hpp  csv_reader.h  datadocs-extension.hpp  datadocs.hpp  file_reader.h  inferrer.h  inferrer_impl.h  json.h  json_reader.h  type_conv.h  utility.h  value_proxy.hpp  vector_converter.hpp  vector_proxy.hpp  wkt.h  xls.h  xls_reader.h  xml.h  xml_reader.h  zip_reader.h
extension/datadocs/include/boost_exc/spirit/home/x3/auxiliary/: guard.hpp
extension/datadocs/include/boost_exc/spirit/home/x3/nonterminal/detail/: rule.hpp
extension/datadocs/include/libxls/: brdb.h  endian.h  ole.h  xlsstruct.h  xlstool.h  xlstypes.h
extension/datadocs/include/xls/: read_xls.h  read_xlsx.h  xlscommon.h  zip_memory.h
extension/datadocs/src/simple_icu_init/: simple_icu_init.cpp  simple_icu_init.h
extension/datadocs/xls/: read_xls.cpp  read_xlsx.cpp  xlscommon.cpp  zip_memory.cpp
extension/datadocs/xls/src/: config.h  endian.c  ole.c  xls.c  xlstool.c
extension/datadocs/xls/xlsx/: xlsxio_read.c  xlsxio_read.h  xlsxio_version.h
extension/variant/: CMakeLists.txt  variant-extension.cpp  variant_value.cpp
extension/variant/include/: variant-extension.hpp  variant_value.hpp
extension/variant_json/: CMakeLists.txt  value_proxy.cpp  variant-extension.cpp
extension/variant_json/include/: value_proxy.hpp  variant-extension.hpp
src/main/extension/: extension_helper.cpp
test/: CMakeLists.txt
test/variant/: CMakeLists.txt  generate_variant_test.py  test_variant.cpp  test_variant.inc  test_variant.test
